added ScheduleMate name

--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="signin.css">
-    <title>Meeting Schedular</title>
+    <title>ScheduleMate</title>
 </head>
 
 <body>
     <div class="container">
         <div class="topbar">
-            <h3>
-                <p>Schedule Management Systems</p>
-            </h3>
+            <p>
+            <h2>ScheduleMate</h2>
+            <h3>Schedule Management System</h3>
+            </p>
         </div>
         <div class="main_content">
             <div class="box">
