--- a/public/landing.html
+++ b/public/landing.html
@@ -22,10 +22,10 @@
                 <p>Welcome to the Login</p>
                 <form action="/" method="post">
                     <label for="">Email:</label>
-                    <input type="email" name="mail" id="">
+                    <input type="email" name="mail">
                     <br>
                     <label for="">Password: </label>
-                    <input type="password" name="pwd" id=""> <br>
+                    <input type="password" name="pwd"> <br>
                     <button type="submit">Sign In &nbsp;&nbsp;&nbsp;<i class="fas fa-sign-in-alt"></i></button>
                 </form>
             </div>
